tests/invariant/invariant.exp
Error ----------------------------------------------------------------------------------------------------- index.js:4:1

This use of `invariant` is unnecessary because boolean literal `true` [1] is always truthy. [unnecessary-invariant]

   index.js:4:1
   4| invariant(a); // constant-condition error
      ^^^^^^^^^^^^

References:
   index.js:3:16
   3| declare var a: true;
                     ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:4:11

This condition is likely truthy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   index.js:4:11
   4| invariant(a); // constant-condition error
                ^

References:
   index.js:3:16
   3| declare var a: true;
                     ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:7:11

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   index.js:7:11
   7| invariant(b); // constant-condition error
                ^

References:
   index.js:6:16
   6| declare var b: false;
                     ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:11:1

This condition is likely truthy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   index.js:11:1
   11| c ? invariant(c) : invariant(c); // constant-condition error
       ^

References:
   index.js:9:16
    9| declare var c: boolean;
                      ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:11:5

This use of `invariant` is unnecessary because boolean [1] is always truthy. [unnecessary-invariant]

   index.js:11:5
   11| c ? invariant(c) : invariant(c); // constant-condition error
           ^^^^^^^^^^^^

References:
   index.js:9:16
    9| declare var c: boolean;
                      ^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- index.js:11:15

This condition is likely truthy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   index.js:11:15
   11| c ? invariant(c) : invariant(c); // constant-condition error
                     ^

References:
   index.js:9:16
    9| declare var c: boolean;
                      ^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- index.js:14:11

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   index.js:14:11
   14| invariant(d);
                 ^

References:
   index.js:13:16
   13| declare var d: 0;
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:17:1

This use of `invariant` is unnecessary because number literal `1` [1] is always truthy. [unnecessary-invariant]

   index.js:17:1
   17| invariant(e);
       ^^^^^^^^^^^^

References:
   index.js:16:16
   16| declare var e: 1;
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- index.js:23:1

This use of `invariant` is unnecessary because intersection type [1] is always truthy. [unnecessary-invariant]

   index.js:23:1
   23| invariant(g); // constant-condition error
       ^^^^^^^^^^^^

References:
   index.js:22:16
   22| declare var g: false & true;
                      ^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- index.js:23:11

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   index.js:23:11
   23| invariant(g); // constant-condition error
                 ^

References:
   index.js:22:16
   22| declare var g: false & true;
                      ^^^^^ [1]



Found 10 errors
